hphp/hack/test/enum_class_label/typing/function_pointer.php.exp
File "function_pointer.php", line 23, characters 12-22:
Function pointer on functions/methods using __ViaLabel is not supported. (Typing[4437])
  File "function_pointer.php", line 13, characters 62-63:
  __ViaLabel is used here.
File "function_pointer.php", line 32, characters 8-10:
Function pointer on functions/methods using __ViaLabel is not supported. (Typing[4437])
  File "function_pointer.php", line 27, characters 46-47:
  __ViaLabel is used here.
